// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSumary in caso of no expenses 1`] = `
<p>
  Viewing 
  0
   
  expenses
  , totalling
   
  $0.00
</p>
`;

exports[`should render ExpenseSumary with expenses 1`] = `
<p>
  Viewing 
  3
   
  expenses
  , totalling
   
  $1,141.95
</p>
`;
